# kihon

./: .gitattributes  CMakeLists.txt  Gemfile  README.md  commit.sh  heroku.txt  package.json
app/assets/javascripts/: application.js
app/assets/stylesheets/: application.css  application.scss  scaffolds.scss  tokens.scss
app/controllers/: misc_controller.rb  tokens_controller.rb
app/models/: token.rb  token_order.rb
app/pdfs/: cards_pdf.rb
app/views/kaminari/: _first_page.html.erb  _last_page.html.erb  _next_page.html.erb  _page.html.erb  _prev_page.html.erb
app/views/kaminari_bottom/kaminari/: _first_page.html.erb  _last_page.html.erb  _next_page.html.erb  _page.html.erb  _paginator.html.erb  _prev_page.html.erb
app/views/kaminari_top/kaminari/: _paginator.html.erb
app/views/layouts/: application.html.erb
app/views/misc/: _letters.html.erb  _strokes.html.erb  _svg_hiragana.html.erb  _svg_katakana.html.erb  _token.html.erb  print.html.erb
app/views/tokens/: _audio.html.erb  _cells.html.erb  _filter.html.erb  _filter_date.html.erb  _filter_pos.html.erb  _form.html.erb  _paginate.html.erb  _search.html.erb  _thead.html.erb  _token.json.jbuilder  index.html.erb  show.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: production.rb
config/initializers/: kaminari_config.rb
config/locales/: de.yml  en.yml
db/: schema.rb  seeds.rb
db/migrate/: 20190404190214_create_tokens.rb  20190516090008_add_examen_to_tokens.rb  20190630134748_add_number_to_tokens.rb  20190720090544_add_course_to_tokens.rb  20191028153121_add_english_to_tokens.rb  20191028161114_change_number_to_be_string_in_tokens.rb  20191031214752_create_token_orders.rb  20191103144707_add_group_to_tokens.rb  20191103155620_add_category_to_tokens.rb  20200119115956_add_kana_to_tokens.rb
doc/: CMakeLists.txt  nihonngo.tex
doc/csv2tex/: CMakeLists.txt  csv2tex.cpp
doc/csv2tex/todo/: todo.txt
lib/seeds/: JLPT-N5-groups.csv  JLPT-N5-groups.numbers  JLPT-N5.csv  fetch-jlpt-n5.rb  japanisch-a1-1.csv  japanisch-a1-1.numbers  nihonngo.csv  nihonngo.numbers  vhs-heilbronn.csv  vhs-heilbronn.numbers
test/controllers/: misc_controller_test.rb  tokens_controller_test.rb
test/fixtures/: tokens.yml
test/models/: token_order_test.rb
test/system/: tokens_test.rb
